# pomodorotimer

./: .gitignore  Cargo.toml  LICENSE  README.md  database.db
.github/workflows/: rust.yml
migrations/2025-01-20-090850_create_runs/: down.sql  up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  pomodoro_timer.rs  timer_commander.rs  timer_database.rs  timer_runner.rs  tui_app.rs
src/app/: mod.rs  tui_app.rs
src/core/: commands.rs  mod.rs  models.rs  pomodoro_timer.rs  schema.rs  timer_commander.rs  timer_database.rs  timer_runner.rs
src/db/: mod.rs  models.rs  timer_database.rs
tests/: pomodoro_timer_tests.rs
